<resources>
    <string name="app_name">Jeeran</string>


    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="email_address">Email Address</string>
    <string name="register">Register</string>
    <string name="register_with_fb">Register With Facebook</string>
    <string name="title_activity_register_account">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_confirm_password">Confirm Password </string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register_with_facebook">Register With Facebook</string>
    <string name="create_account">Create Account</string>
    <string name="action_sign_in_fb">Login With Facebook</string>
    <string name="action_forgot_password">Forgot Your Password?!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="facebook_app_id">1303282329685203</string>

</resources>
